1.18 backport progress